--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="hgM1mRy77peZu8FDPlj+D+zzk9lUIDYr+UneitLMZrX1sHGsLWgVqKSQduuXQCsOc4hPbF1CJ6pvt+CGyeie6b32jpqrMfsDOVXMhlTM4FmOzlok3Q+5Out/ehdO+YOj" data-form-email="true">
+                    <input type="hidden" value="36vqRO7CrhUe5SBqxrQTrrKJgt9bzwrHYPpRLhfA4wUlrXrEj/qE64Q+4PSpcjINTfps2ltaO5uFSjHW4pd4qifrFtbuZycdga1MbVYOxqbZA4d2pMQQORVZAT5x12tL" data-form-email="true">
 
                     
 
