--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="FBo1KtZ4LZZgUdaD0z4wX38PqEB38SlrLYDZmbDEVnQSvKwNF5oIbCoRPCquSO3SgyDLtmBjqG2JvqdxAzlAf+J19FAKwSlPRStO7DibzKY5XByABPQivYsRMmA9jYr3" data-form-email="true">
+                    <input type="hidden" value="bPf0VGFDgXNFJ2L4BCJKvxwYIA7kNqM9UFgMFcqT9465/6mWmvWd7FcxIC0n9HEzMrslF7GSwJwM2BMw+XJ0AB129DhtDWcUgSXsg4fUNI+VTGjaf9QWTz5++xK2lEdS" data-form-email="true">
 
                     
 
