--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header1-45" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);"></div>
 
@@ -246,7 +246,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="va6TZMNN5Ice2Bk2UKKB/82sKbqim/pWFO26aj+Cv57YsKggbcgaJKP78hOJIJVjrQBL+RweKGUr+EvXlLZ0P6HKM0a/ZRI18vryNNNZ9TQjZBGJa7K1JrC+iFo0tpdA" data-form-email="true">
+                    <input type="hidden" value="owx0o+gAXMOuakXImtJLwd3OwL1aZ2UQq4oHcavWrQ26AMm+5hhf4mZ7HADWhiRTxxl1I/GDHGoJQ95++FoFEZGtPKnzDN6aSDu0edPe+Vcb+iSFUxASsMtdIViB1pkl" data-form-email="true">
 
                     
 
